--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/ArduinoDataToExcel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.PanamaHitek_Arduino-2.8.2.jar=C:\\Users\\Seijas\\Downloads\\PanamaHitek_Arduino-2.8.2.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.PanamaHitek_Arduino-2.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
